--- a/defaults.toml
+++ b/defaults.toml
@@ -1,4 +1,14 @@
+moxy_path = "/moxy"
 default_upstream = "https://go-feed-me.joe-davidson.co.uk"
 [[upstream]]
 path_prefix = "/apps/basket"
+url = "http://localhost:8085"
+[[upstream]]
+path_prefix = "/apps/browse"
+url = "http://localhost:8085"
+[[upstream]]
+path_prefix = "/apps/details"
+url = "http://localhost:8085"
+[[upstream]]
+path_prefix = "/apps/random"
 url = "http://localhost:8085"
