--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,6 +11,10 @@ steps:
    entrypoint: 'bash'
    args: ['-c', 'docker push $$USERNAME/moxy:$TAG_NAME']
    secretEnv: ['USERNAME']
+ - name: 'gcr.io/cloud-builders/docker'
+   entrypoint: 'bash'
+   args: ['-c', 'docker push $$USERNAME/moxy:latest']
+   secretEnv: ['USERNAME']
 availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/docker-password/versions/1
