--- a/defaults.toml
+++ b/defaults.toml
@@ -2,13 +2,13 @@ moxy_path = "/moxyo"
 default_upstream = "http://localhost:8081"
 [[upstream]]
 path_prefix = "/apps/basket"
-url = "http://localhost:8085"
+host = "http://localhost:8085"
 [[upstream]]
 path_prefix = "/apps/browse"
-url = "http://localhost:8085"
+host = "http://localhost:8085"
 [[upstream]]
 path_prefix = "/apps/details"
-url = "http://localhost:8085"
+host = "http://localhost:8085"
 [[upstream]]
 path_prefix = "/apps/random"
-url = "http://localhost:8085"
+host = "http://localhost:8085"
